--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "CUDA C++: Launch",
+            "type": "cuda-gdb",
+            "request": "launch",
+            "program": "${workspaceFolder}/cuda/bin/PCF",
+            "args": "2ani -f data_500.dat -r rand0_500.dat -b 50 -d 150 -bpc",
+        },
+        {
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
