--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,13 @@
             "args": "2ani -f data_500.dat -r rand0_500.dat -d 150 -b 50",
         },
         {
+            "name": "2ani-dir",
+            "type": "cuda-gdb",
+            "request": "launch",
+            "program": "${workspaceFolder}/cuda/bin/PCF",
+            "args": "2ani -f data_500.dat -rd rtest/ -d 150 -b 50",
+        },
+        {
             "name": "2iso-pips",
             "type": "cuda-gdb",
             "request": "launch",
