--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,13 @@
             "args": "2ani -f data_500.dat -r rand0_500.dat -d 150 -b 50 -P",
         },
         {
+            "name": "2ani-pips-dir",
+            "type": "cuda-gdb",
+            "request": "launch",
+            "program": "${workspaceFolder}/cuda/bin/PCF",
+            "args": "2ani -f data.dat -rd rtest/ -d 150 -b 50 -P",
+        },
+        {
             "name": "2ani",
             "type": "cuda-gdb",
             "request": "launch",
