--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,6 +26,13 @@
             "args": "2ani -f data_500.dat -r rand0_500.dat -d 150 -b 50",
         },
         {
+            "name": "2ani-BPC",
+            "type": "cuda-gdb",
+            "request": "launch",
+            "program": "${workspaceFolder}/cuda/bin/PCF",
+            "args": "2ani -f data_500.dat -r rand0_500.dat -d 140 -b 30 -bpc",
+        },
+        {
             "name": "2ani-dir",
             "type": "cuda-gdb",
             "request": "launch",
